# MCSL-Sync-Backend

./: .gitignore  README.md  main.py  main_ez.py  main_fabric.py  main_forge.py  main_leavesmc.py  main_mohistmc.py  main_papermc.py  main_purpurmc.py  pyproject.toml  requirements.txt
.github/workflows/: sync_db.yml  sync_prod.yml  sync_single_db.yml
data/: settings.json
src/: __init__.py
src/api/: __init__.py  base.py  model.py
src/completion_handler/: __init__.py
src/completion_handler/arclight_powered/: __init__.py  base.py  runner.py
src/completion_handler/bungeecord/: __init__.py  runner.py
src/completion_handler/catserver/: __init__.py  base.py  runner.py
src/completion_handler/getbukkit/: runner.py
src/completion_handler/leavesmc/: __init__.py  base.py  runner.py
src/completion_handler/mohistmc/: __init__.py  base.py  runner.py
src/completion_handler/papermc/: __init__.py  base.py  runner.py
src/completion_handler/pufferfish/: __init__.py  base.py  runner.py
src/completion_handler/purpurmc/: runner.py
src/completion_handler/sponge_powered/: __init__.py  base.py  runner.py
src/handler/: __init__.py
src/handler/akarin/: __init__.py  base.py  runner.py
src/handler/arclight_powered/: base.py  runner.py
src/handler/bungeecord/: __init__.py  runner.py
src/handler/catserver/: base.py  runner.py
src/handler/contigo/: __init__.py  base.py  runner.py
src/utils/: __init__.py  alist.py  arg_parser.py  database.py  downloader.py  getbukkit.py  github_releases.py  jenkins.py  logger.py  minecraft.py  network.py  settings.py
(+36 files in other folders)
