[project]
name = "MCSL-Sync-Core"
version = "0.1.0"
description = "A tool for synchronizing Minecraft server core files."
authors = [
    {name = "MCSLTeam", email = "services@mcsl.com.cn"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPL-3.0"}


[tool.pdm]
distribution = false
